--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 --color-cream-1: #efead5;
 --color-cream-2: #e8ddac;
 --color-accent-1: #ffcb31;
+/* #3F9198 */
 }
 
 .shaddow {
@@ -36,4 +37,24 @@ h1{
 p{
     color: var(--color-text-1);
     font-family: Comfortaa;
+}
+.border1{
+    background-color: var(--color-brand-2);
+    border-radius: 30% 70% 70% 30% / 58% 55% 45% 42% ;
+}
+.border2{
+    background-color: var(--color-brand-2);
+    border-radius: 32% 68% 63% 37% / 56% 33% 67% 44%   ;
+}
+.border3{
+    background-color: var(--color-brand-2);
+    border-radius: 32% 68% 63% 37% / 56% 57% 43% 44%   ;
+}
+.border4{
+    background-color: var(--color-brand-2);
+    border-radius: 49% 51% 63% 37% / 73% 55% 45% 27%    ;
+}
+.border5{
+    background-color: var(--color-brand-2);
+    border-radius: 49% 51% 47% 53% / 64% 69% 31% 36%    ;
 }
